--- a/HairSalon/Views/Clients/Delete.cshtml
+++ b/HairSalon/Views/Clients/Delete.cshtml
@@ -1,13 +1,13 @@
-
 @{
   Layout = "_Layout";
 }
 
-@model HairSalon.Models.Stylist
+@model HairSalon.Models.Client
 
 <h2>Are you sure you want to delete this?</h2>
 
 @Html.DisplayNameFor(model => model.FirstName): @Html.DisplayFor(model => model.FirstName)
+
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
