--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
   Layout = "_Layout"; 
 }
 
-<h1>Welcome to the Eau Claire's Salon!</h1>
-<p>@Html.ActionLink("View all Clients!", "Index", "Clients")</p>
-<p>@Html.ActionLink("See all Stylists", "Index", "Stylists")</p>
+<h1>Welcome to Eau Claire's Salon!</h1>
+<div class="heading"><h3>@Html.ActionLink("VIEW ALL CLIENTS", "Index", "Clients")</h3></div>
+<div class="heading"><h3>@Html.ActionLink("VIEW ALL STYLISTS", "Index", "Stylists")</h3></div>
