--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -4,18 +4,23 @@
 
 @model HairSalon.Models.Client
 
-<h4>Add a new Client</h4>
+<h3>Add a new Client</h3>
 
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(model => model.FirstName)
+  <div class="formbox">
+  @Html.Label("first name:")
   @Html.TextBoxFor(model => model.FirstName)
-  @Html.LabelFor(model => model.LastName)
+  @Html.Label("last name:")
   @Html.TextBoxFor(model => model.LastName)
-  @Html.LabelFor(model => model.PriceRange)
+  </div>
+
   @Html.DropDownList("Services", new List<SelectListItem>
     {
     new SelectListItem { Text = "Hair Cut", Value = "Hair Cut"},
+    new SelectListItem { Text = "Full Color", Value = "Full Color"},
+    new SelectListItem { Text = "Highlights", Value = "Highlights"},
+    new SelectListItem { Text = "Blowdry", Value = "Blowdry"},
     })
 
   @Html.LabelFor(model => model.Stylist)
