--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -2,10 +2,10 @@
   Layout = "_Layout";
 }
 
-@model BestRestaurant.Models.Client
+@model HairSalon.Models.Client
 
 <h2>Client Details</h2>
-<hr />
+<div></div>
 <h3>@Html.DisplayNameFor(model => model.FirstName): @Html.DisplayFor(model => model.FirstName)<h3>
 <h3>@Html.DisplayNameFor(model => model.LastName): @Html.DisplayFor(model => model.LastName)<h3>
 
