--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -15,7 +15,7 @@
     <ul>
       @foreach (Client client in Model.Clients) 
       {
-        <li>@Html.ActionLink($"{client.Title}", "Details", "Clients", new { id = client.ClientId})</li>
+        <li>@Html.ActionLink($"{client.FirstName}", "Details", "Clients", new { id = client.ClientId})</li>
       }
     </ul>
 
